# music-tag-cleanup-toolkit-icm

./: LICENSE  Makefile  README.md  pyproject.toml
src/music_tag_cleanup_toolkit/: cli.py
src/music_tag_cleanup_toolkit/extract_tags/: base_metadata_extractor.py  dispatcher.py  flac_metadata_extractor.py  mp3_metadata_extractor.py  registry.py  runner.py
src/music_tag_cleanup_toolkit/models/: audio_format.py  music_file.py
